recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:2: error: not found: value avancer
  avancer(100)
  ^