recursion.logo.square.FourSquare.scala.code
override def run() {
  avancer(100)
}